# color-target

./: README.md  io.github.igor_dyatlov.ColorTarget.json  meson.build
data/: io.github.igor_dyatlov.ColorTarget.appdata.xml.in  io.github.igor_dyatlov.ColorTarget.desktop.in  io.github.igor_dyatlov.ColorTarget.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  POTFILES.in  meson.build
src/: color-target.gresource.xml  color-target.in  main.py  meson.build  window.blp  window.py  window.ui
